<resources>
    <string name="app_name">Niceness</string>
    //Inicio
    <string name="et_email">Example@gmail.com</string>
    <string name="et_password">Password</string>
    <string name="rd_forgot">Mantenme conectado</string>
    <string name="btn_login">LOG IN</string>
    <string name="tv_forgot">FORGOT PASSWORD</string>
    <string name="btn_signup">SIGN UP</string>
    <string name="et_emails">Email</string>
    <string name="et_nombreU">Nombre</string>
    <string name="s_termin">I have read and accept the Terms and Conditions</string>
    <string name="msg_no_data">No hay datos</string>
    <string name="msj_no_accede">No puede acceder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_reset">Reestablecer</string>
    <string name="tv_reset">Al hacer clic en RESTABLECER,              recibirá un correo electrónico para restablecer su contraseña</string>
    <string name="msg_pass">La contraseña debe tener al menos 6 caracteres</string>
    <string name="msj_registrado">Usuario registrado</string>
    <string name="msj_usuario_con">Usuario conectado</string>
    <string name="tv_data">Datos del perfil guardado</string>
    <string name="no_data">Debe introducir todos los datos</string>
    <string name="msj_no_registrado">Usuario no registrado</string>
    <string name="msg_data_reset">Es necesario rellenar el campo requerido</string>
    <string name="msg_revision">Por favor revisa tu correo electrónico</string>
    <string name="btn_singup">Sign Up</string>
    <string name="btn_loginU">Login</string>
    <string name="tv_main1">The best way to meet to people.</string>
    <string name="tv_main2">Lets get started!</string>
    <string name="profile_name">HappySmile</string>
    <string name="trekking">TREKKING</string>
    <string name="btn_ViewDetails">View Details</string>
    <string name="hashtag_trek">#Acampada #Senderismo #Rutas #Paisaje</string>
    <string name="tecn">TECNOLOGÍA</string>
    <string name="hashtag_tec">#Videojuegos #PC #ProgramacióJAVA #3D</string>
    <string name="mus">MÚSICA</string>
    <string name="hashtag_mus">#Pop #TopMusic #Banda #Clasesdepiano</string>
    <string name="com">COMIDA</string>
    <string name="hashtag_com">#Food #Saludable #RecetasVegetarianas #Glovo</string>
    <string name="hom">HOME</string>
    <string name="hashtag_home">#Fontanería #Electrodomésticos #Pintura</string>
    <string name="animal">ANIMALES</string>
    <string name="hashtag_animal">#Naturaleza #Domésticos #Salvajes #Veterinario</string>
    <string name="titulo">TITULO</string>
    <string name="descrip">Descripcion</string>
    <string name="btn_escanear">Escanear Código QR</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="likes">Likes</string>
    <string name="et_nombre">Introduzca el nombre</string>
    <string name="tv_codeqr">Código QR</string>
    <string name="btn_codeqr">Crear Código QR</string>
    <string name="satelite">SATÉLITE</string>
    <string name="et_localizacion">Introduzca la localizacion</string>
    <string name="btn_buscar">BUSCAR</string>
    <string name="add_image">ADD</string>
    <string name="btn_save">Guardar</string>
    <string name="tv_niceness">NiceNess</string>
    <string name="et_hint_mensaje">Escribe la consulta</string>
    <string name="menu_refresh">Refresh</string>
    <string name="tv_texto">Hola</string>
    <string name="tv_username">username</string>
    <string name="tv_perfil">Perfil</string>
    <string name="et_buscar">Buscar...</string>
</resources>