<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CodeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_codeqr"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/azule"/>

    <ImageView
        android:id="@+id/codeqr"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        />
    <EditText
        android:id="@+id/etNombre"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_centerInParent="true"
        android:hint="@string/et_nombre"
        android:layout_below="@+id/codeqr"/>
    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_codeqr"
        android:layout_below="@id/etNombre"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        style="@style/btn_sign"/>


    <Button
        android:id="@+id/btnEscanear"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn"
        android:layout_marginTop="48dp"
        android:layout_centerInParent="true"
        style="@style/btn_login"
        android:onClick="escanear"
        android:text="@string/btn_escanear"
        android:textColor="@color/white" />
</RelativeLayout>