<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/llLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llLogo"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="?android:attr/secondaryContentAlpha"
            android:scaleType="fitXY"
            android:src="@drawable/main"
            tools:targetApi="o" />



    </LinearLayout>


    <TextView
        android:id="@+id/tvMain1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_main1"
        android:layout_centerInParent="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tvMain2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_main2"
        android:layout_below="@id/tvMain1"
        android:layout_centerInParent="true"
        android:textSize="14sp"
        android:textStyle="italic"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/bottomSignUp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="168dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_singup"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/bottomLogin"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/azule"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="108dp"
        android:text="@string/btn_login"
        android:textSize="20sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">






    </LinearLayout>

</RelativeLayout>