<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inicio.RestPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/resetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etResetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:fontFamily="@font/lato_regular"
                android:textSize="@dimen/txt"
                android:hint="@string/et_nombre" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignS"
            style="@style/btn_login"
            android:layout_width="325dp"
            android:layout_height="62dp"
            android:layout_marginLeft="34dp"
            android:layout_below="@id/etResetPassword"
            android:layout_marginTop="23dp"
            android:fontFamily="@font/lato_bold"
            android:onClick="reset"
            android:text="@string/btn_reset"
            android:textSize="@dimen/txt">

        </com.google.android.material.button.MaterialButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textColor="#000"
            android:textStyle="italic"
            android:text="@string/tv_reset"/>

    </LinearLayout>




</RelativeLayout>