<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="16dp"
                android:src="@drawable/ic_search" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:hint="Search" />

            <ImageView
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:src="@drawable/logo" />


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:id="@+id/rlTrekk"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="#613B0A">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="25dp"
                    android:text="@string/trekking"
                    android:textColor="@color/white"
                    android:textAllCaps="true"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnViewDetailsT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:backgroundTint="#613B0A"
                    android:fontFamily="sans-serif"
                    android:padding="20dp"
                    android:text="@string/btn_ViewDetails"
                    android:onClick="DetailsTrekking"/>

            </RelativeLayout>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/trekk" />



        </RelativeLayout>
        <com.github.aakira.expandablelayout.ExpandableRelativeLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:id="@+id/expandable">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/expandable"
                android:lineSpacingExtra="2dp"
                android:text="@string/hashtag_trek"/>

        </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="#16A2E6">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="25dp"
                    android:text="@string/tecn"
                    android:textColor="@color/white"
                    android:textAllCaps="true"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnViewDetailsTe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:backgroundTint="#16A2E6"
                    android:fontFamily="sans-serif"
                    android:padding="20dp"
                    android:text="@string/btn_ViewDetails"
                    android:onClick="DetailsTecnology"/>

            </RelativeLayout>


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/technology" />


        </RelativeLayout>
        <com.github.aakira.expandablelayout.ExpandableRelativeLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:id="@+id/expandable1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/expandable"
                android:lineSpacingExtra="2dp"
                android:text="@string/hashtag_tec"/>

        </com.github.aakira.expandablelayout.ExpandableRelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="#E3B13B">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="25dp"
                    android:text="@string/mus"
                    android:textColor="@color/white"
                    android:textAllCaps="true"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnViewDetailsM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:backgroundTint="#E3B13B"
                    android:fontFamily="sans-serif"
                    android:padding="20dp"
                    android:text="@string/btn_ViewDetails"
                    android:onClick="DetailsMusic"/>

            </RelativeLayout>


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/music" />


        </RelativeLayout>
        <com.github.aakira.expandablelayout.ExpandableRelativeLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:id="@+id/expandable2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/expandable"
                android:lineSpacingExtra="2dp"
                android:text="@string/hashtag_mus"/>

        </com.github.aakira.expandablelayout.ExpandableRelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="#E46D99">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="25dp"
                    android:text="@string/com"
                    android:textColor="@color/white"
                    android:textAllCaps="true"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnViewDetailsF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:backgroundTint="#E46D99"
                    android:fontFamily="sans-serif"
                    android:padding="20dp"
                    android:text="@string/btn_ViewDetails"
                    android:onClick="DetailsFood"/>

            </RelativeLayout>


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/food" />


        </RelativeLayout>
        <com.github.aakira.expandablelayout.ExpandableRelativeLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:id="@+id/expandable3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/expandable"
                android:lineSpacingExtra="2dp"
                android:text="@string/hashtag_com"/>

        </com.github.aakira.expandablelayout.ExpandableRelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="#8E24AA">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="25dp"
                    android:text="@string/hom"
                    android:textColor="@color/white"
                    android:textAllCaps="true"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnViewDetailsH"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:backgroundTint="#8E24AA"
                    android:fontFamily="sans-serif"
                    android:padding="20dp"
                    android:text="@string/btn_ViewDetails"
                    android:onClick="DetailsHome"/>

            </RelativeLayout>


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/tools" />


        </RelativeLayout>
        <com.github.aakira.expandablelayout.ExpandableRelativeLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:id="@+id/expandable4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/expandable"
                android:lineSpacingExtra="2dp"
                android:text="@string/hashtag_home"/>

        </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="#84C83C">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="25dp"
                    android:text="@string/animal"
                    android:textColor="@color/white"
                    android:textAllCaps="true"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnViewDetailsAnimals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:backgroundTint="#84C83C"
                    android:fontFamily="sans-serif"
                    android:padding="20dp"
                    android:text="@string/btn_ViewDetails"
                    android:onClick="DetailsAnimal"/>

            </RelativeLayout>


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/birds" />


        </RelativeLayout>
        <com.github.aakira.expandablelayout.ExpandableRelativeLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:id="@+id/expandable5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/expandable"
                android:lineSpacingExtra="2dp"
                android:text="@string/hashtag_animal"/>

        </com.github.aakira.expandablelayout.ExpandableRelativeLayout>


    </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/menu_navigation" />

</RelativeLayout>